--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^9.6.6",
     "phaser": "^3.55.2",
     "vue": "^2.6.11"
   },
